--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Gerenciador Financeiro SDM</string>
+    <string name="splash_titulo">Gerenciador Financeiro</string>
 </resources>
