--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Gerenciador Financeiro SDM</string>
     <string name="splash_titulo">Gerenciador Financeiro</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="texto_de_abertura">Crie sua primeira conta aqui!</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
