Correção ao incluir conta Aprendendo mais sobre Fragment e aplicando no projeto Implementando a inclusão de transações

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="operacao">Operação:</string>
+    <string name="transferir_para">Transferir para:</string>
+    <string name="saldo">Saldo</string>
+    <string name="descricao">Descrição</string>
+    <string name="classificacao">Classificação:</string>
 </resources>
